# dnsproxy

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  README  README.md  configure.in  dns.h  dnsutil.c  gen.sh  index.html  mkdocs.yml  params.json
c/: CMakeLists.txt  Makefile  dnsc.c  dnssrv_2.c  dnsutil.c
docs/: index.md
python/: dnsproxy.py
samples/: README  dnsproxy_glib.c
src/: .gitignore  CMakeLists.txt  Makefile.am  Sconstruct  cache.c  cache.h  cache2.c  dns.h  dnsc.c  dnsproxy.c  dnsproxy.cfg  dnsproxy.cfg.sample  dnsproxy.h  dnsproxy_2.c  dnsproxy_ldns.c  dnssrv.c  dnsutil.c  iplist.txt  parse_cfg.c
third-part/ldns-1.6.17/: host2wire.c
third-part/ldns-1.6.17/linux/ldns/: config.h
third-part/ldns-1.6.17/win/ldns/: common.h  config.h  net.h
third-part/sqlite/: README
