#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([dnsutil], [1.0], [fandingjun@gmail.com])
AC_CONFIG_SRCDIR([src/dns.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O
AM_INIT_AUTOMAKE(1.0)

# Checks for libraries.
PKG_CHECK_MODULES([GLIB],[glib-2.0])
PKG_CHECK_MODULES([GIO],[gio-2.0])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h netinet/in.h stdint.h stdlib.h string.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([inet_ntoa memset select socket strcasecmp strchr strdup])

AC_CONFIG_FILES([
                 Makefile
                 src/Makefile])
AC_OUTPUT
